@@ -1,3 +1,10 @@
+2007-08-24  Milan Crha  <mcrha@redhat.com>
+
+	** Fix for bug #455858 by Damien Carbery
+
+	* camel/camel-exchange-summary.c:
+	Change __PRETTY_FUNCTION__ to G_GNUC_PRETTY_FUNCTION.
+
 2007-08-17  Srinivasa Ragavan  <sragavan@novell.com>
 
 	** Fix for bug #332979
